@startuml
'left to right direction
skinparam ranksep 60
skinparam nodesep 60

class US14_UpdateTeachersCategoryController {
    +US14_UpdateTeachersCategoryController(teacherCareerProgressionService: ITeacherCareerProgressionService,\n teacherCategoryService: ITeacherCategoryService, teacherService: ITeacherService)
    +findAll()
    +updateTeacherCategoryInTeacherCareerProgression(date: String,\n teacherCategoryID: String, teacherAcronym: String, NIF : String, country: String)
}

class TeacherCareerProgressionService {
    +TeacherCareerProgressionService(teacherCareerProgressionRepository: ITeacherCareerProgressionRepository,\n teacherCareerProgressionFactory: ITeacherCareerProgressionFactory)
    +updateTeachersCategoryInTeacherCareerProgression(dateVO: DateVO,\n teacherCategoryIDVO: TeacherCategoryIDVO, teacherIDVO: TeacherIDVO)
}

interface ITeacherCareerProgressionService {
    +updateTeachersCategoryInTeacherCareerProgression(dateVO: DateVO,\n teacherCategoryIDVO: TeacherCategoryIDVO, teacherIDVO: TeacherIDVO)
}

interface ITeacherCategoryRepo {
    +findAll()
}

class TeacherCategoryRepository {
    +findAll()
}

interface ITeacherCategoryService {
}

class TeacherCategoryService {
}

package "Teacher Aggregate" {
    entity "<<Root>>\n <<Entity>>\n Teacher" {
    +contains()
    }
}

class "<<Value Object>>\n TeacherIDVO" {
}

class "<<Value Object>>\n TeacherAcronymVO" {
    -String: TeacherAcronym
}

package "TeacherCareerProgression Aggregate" {
    entity "<<Root>>\n <<Entity>>\nTeacherCareerProgression" {
        +TeacherCareerProgression(dateVO: DateVO, workingPercentageVO: WorkingPercentageVO)
        +isLastDateEqualOrBeforeNewDate(dateVO: DateVO)
        +getTeacherCategoryID()
        +getWorkingPercentage()
        +getDate()
        +isDateAfter()
    }
}

    class "<<Value Object>>\n TeacherCareerProgressionIDVO" {
          -ID: UUID
    }

    class "<<Value Object>>\n DateVO" {
          -date: LocalDate
    }

    class "<<Value Object>>\n WorkingPercentageVO" {
              -workingPercentage: int
   }

class TeacherCareerProgressionRepository {
    +TeacherCareerProgressionRepository\n(teacherCareerProgressionMapper : TeacherCareerProgressionMapper)
    +findLastTCPFromTeacherID(teacherIDVO: TeacherIDVO)
}

class TeacherRepository {
    +findAll()
    +containsOfIdentity()
}

package "TeacherCategory Aggregate" {
    entity "<<Root>>\n <<Entity>>\nTeacherCategory" {
    }
}

interface ITeacherCareerProgressionRepository {
    +findLastTCPFromTeacherID(teacherIDVO: TeacherIDVO)
}

interface ITeacherRepository {
    +findAll()
    +containsOfIdentity()
}

class "<<Value Object>>\n TeacherCategoryIDVO" {
                -id: UUID
}

class TeacherCareerProgressionFactoryImpl {
    +createTeacherCareerProgression(dateVO: DateVO, workingPercentageVO: WorkingPercentageVO,\nteacherCategoryIDVO: TeacherCategoryIDVO, teacherIDVO: TeacherIDVO)

    +createTeacherCareerProgressionFromDataModel(teacherCareerProgressionIDVO: TeacherCareerProgressionIDVO\n ,dateVO: DateVO, workingPercentageVO: WorkingPercentageVO,\nteacherCategoryIDVO: TeacherCategoryIDVO, teacherIDVO: TeacherIDVO)
}

interface ITeacherCareerProgressionFactory {
    +createTeacherCareerProgression(dateVO: DateVO, workingPercentageVO: WorkingPercentageVO,\nteacherCategoryIDVO: TeacherCategoryIDVO, teacherIDVO: TeacherIDVO)

    +createTeacherCareerProgressionFromDataModel(teacherCareerProgressionIDVO: TeacherCareerProgressionIDVO\n ,dateVO: DateVO, workingPercentageVO: WorkingPercentageVO,\nteacherCategoryIDVO: TeacherCategoryIDVO, teacherIDVO: TeacherIDVO)
}

class TeacherCareerProgressionMapper {
    +toDomain(teacherCareerProgressionDataModel :TeacherCareerProgressionDataModel)
    +toDataModel(teacherCareerProgression :TeacherCareerProgression)
}

interface ITeacherCareerProgressionMapper {
    +toDomain(teacherCareerProgressionDataModel :TeacherCareerProgressionDataModel)
    +toDataModel(teacherCareerProgression :TeacherCareerProgression)
}

class TeacherCareerProgressionIDMapper {
    +toDomain(teacherCareerProgressionIDDataModel :TeacherCareerProgressionIDDataModel)
    +toDataModel(teacherCareerProgressionID :TeacherCareerProgressionID)
}

interface ITeacherCareerProgressionIDMapper {
    +toDomain(teacherCareerProgressionIDDataModel :TeacherCareerProgressionIDDataModel)
    +toDataModel(teacherCareerProgressionID :TeacherCareerProgressionID)
}

class TeacherCareerProgressionIDDataModel {
    -UUID id
    +getIdValue()
}

class TeacherCareerProgressionDataModel {
    -teacherCareerProgressionID : UUID
    -date : localDate
    -teacherCategoryID : UUID
    -workingPercentage : int
    -teacherAcronym : String
    -NIF : String
    -Country : String
}

class TeacherService {
    +findAll()
}

interface ITeacherService {
    +findAll()
}

interface ITeacherCareerProgressionRepositorySpringData {
    +save()
    +findTopByTeacherIDOrderByDateDesc()
}

US14_UpdateTeachersCategoryController "1" --> "_teacherCategoryService \n 1" ITeacherCategoryService
US14_UpdateTeachersCategoryController "1" --> "_teacherService \n 1" ITeacherService
US14_UpdateTeachersCategoryController "1" --> "_teacherCareerProgressionService \n 1" ITeacherCareerProgressionService
ITeacherService "1" <|.. "1" TeacherService
ITeacherCareerProgressionService "1" <|.. "1" TeacherCareerProgressionService
TeacherCareerProgressionService "1" ..> "1" ITeacherCareerProgressionFactory
TeacherCategoryService "1" .u.|> "1" ITeacherCategoryService
TeacherService "1" --> "_teacherRepository \n 1" ITeacherRepository
TeacherCategoryService "1" --> "_teacherCategoryService \n 1" ITeacherCategoryRepo
TeacherCategoryRepository "1" ..|> "1" ITeacherCategoryRepo
TeacherCareerProgressionService "1" ---> "_teacherCareerProgressionRepository \n 1" ITeacherCareerProgressionRepository
"<<Root>>\n <<Entity>>\n Teacher" "_teachers         \n 1..*           " <-- "1" ITeacherRepository
TeacherCareerProgressionMapper "1" -u-> "_teacherCareerProgressionFactory \n1" ITeacherCareerProgressionFactory
TeacherCareerProgressionRepository "1" --> "_teacherCareerProgressionMapper \n1" ITeacherCareerProgressionMapper
ITeacherCareerProgressionMapper "1" <|.. "1" TeacherCareerProgressionMapper
TeacherCareerProgressionMapper "1" ..> "1" TeacherCareerProgressionDataModel
TeacherCareerProgressionMapper "1" --> "_teacherCareerProgressionIDMapper\n1" ITeacherCareerProgressionIDMapper
ITeacherCareerProgressionIDMapper "1" <|.. "1" TeacherCareerProgressionIDMapper
TeacherCareerProgressionIDDataModel "1" <.. "1" TeacherCareerProgressionIDMapper
"<<Value Object>>\n TeacherIDVO" "1  " <-- "\n 1..*     " "<<Root>>\n <<Entity>>\nTeacherCareerProgression"
TeacherCareerProgressionFactoryImpl "1" ..> "   \n        1..*" "<<Root>>\n <<Entity>>\nTeacherCareerProgression"
TeacherCareerProgressionFactoryImpl .l.|> ITeacherCareerProgressionFactory
"<<Root>>\n <<Entity>>\n Teacher" "1" --> "1" "<<Value Object>>\n TeacherIDVO"
"<<Value Object>>\n TeacherAcronymVO" "1" <-- "1" "<<Value Object>>\n TeacherIDVO"
"<<Root>>\n <<Entity>>\nTeacherCareerProgression" "1" --> "1" "<<Value Object>>\n TeacherCareerProgressionIDVO"
"<<Root>>\n <<Entity>>\nTeacherCareerProgression" "1" --> "1" "<<Value Object>>\n DateVO"
"<<Root>>\n <<Entity>>\nTeacherCareerProgression" "1" --> "1" "<<Value Object>>\n WorkingPercentageVO"
"<<Root>>\n <<Entity>>\nTeacherCareerProgression" "1" --> "1" "<<Value Object>>\n TeacherCategoryIDVO"
"<<Value Object>>\n TeacherCategoryIDVO" "1" <-u- "1" "<<Root>>\n <<Entity>>\nTeacherCategory"
ITeacherCareerProgressionRepository "1" <|.r. "1"  TeacherCareerProgressionRepository
ITeacherRepository "1"  <|.. "1" TeacherRepository
ITeacherCareerProgressionRepositorySpringData "1" <.. "1" TeacherCareerProgressionRepository
@enduml